agui_macros/tests/compile-fail/build_field_no_value.stderr
error: unexpected end of input, expected expression
 --> tests/compile-fail/build_field_no_value.rs:9:9
  |
9 |         }
  |         ^

warning: unused import: `agui_primitives::Quad`
 --> tests/compile-fail/build_field_no_value.rs:3:5
  |
3 | use agui_primitives::Quad;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
